package evaluacion;

//Interfaz que define el contrato para evaluar el estado académico.

public interface IEvaluador {
    String calcularEstado(float promedio);
}
